--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Whole latte love</title>
+		<title>A Whole latte love</title>
 	</head>
 
 	<body>
 		
 		<h1>Welcome to the exciting world of coffee!</h1>
-			<p>Here you will discover the amazing varities of coffee as well as the many different pairing available.</p>
+			<p>Here you will discover the amazing varities of coffee as well as the many different pairings available.</p>
 
 	</body>
 
