--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>A Whole latte love</title>
+		<title>Fists in the wind</title>
 	</head>
 
 	<body>
 		
 		<h1>Welcome to the exciting world of coffee!</h1>
+			
 			<p>Here you will discover the amazing varities of coffee as well as the many different pairings available.</p>
+		
+				
+
+			<p>This site was born from the idea that coffee shouldn't be consumed alone. </p>
 
 	</body>
 
