--- a/index.html
+++ b/index.html
@@ -16,43 +16,36 @@ li {
 }
 </style>
 
-	<!-- Header -->	
-	<div id = "Header">
-
-		<head>
+<body>
+<!-- Header -->	
+<div id = "Header">
+	<head>
 			<title>Fists in the Wind</title>
 		</head>
 	</div>
 
-<body>
 
-	<!-- Create Nav bar -->	
-	<div id="navBar">
-
-		<ul>
-	  		<li><a href="">Home</a></li>
-	  		<li><a href="">Daily Brew</a></li>
-	  		<li><a href="">Featured Coffee</a></li>
-	  		<li><a href="">How To</a></li>
-	  		<li><a href="">About</a></li>	
-
-		</ul>
-
-	</div>
+<!-- Create Nav bar -->	
+<div id="navBar">
+	<ul>
+	  	<li><a href="https://GiangFett.githiub.io">Home</a></li>
+	  	<li><a href="">Daily Brew</a></li>
+	  	<li><a href="">Featured Coffee</a></li>
+	  	<li><a href="">How To</a></li>
+	  	<li><a href="">About</a></li>	
+	</ul>
+</div>
 	
 
-	<!-- Main Content -->
-	<div id = "main">	
+<!-- Main Content -->
+<div id = "main">			
+	<h1>Welcome to the Fists in the wind!</h1>
+		<p>We'd like to send a warm earthy welcome from the team at Fist in the Wind. Here you will discover the amazing varities of coffee as well as the many different pairings available.</p>
 		
-		<h1>Welcome to the Fists in the wind!</h1>
-			
-			<p>We'd like to send a warm earthy welcome from the team at Fist in the Wind. Here you will discover the amazing varities of coffee as well as the many different pairings available.</p>
-		
-			<br>			
+	<br>			
+		<p>This site was born from the idea that coffee shouldn't be consumed alone. So go grab a cup, some food, and enjoy with some friends.</p>
 
-			<p>This site was born from the idea that coffee shouldn't be consumed alone. So go grab a cup, some food, and enjoy with some friends.</p>
-
-	</div>
+</div>
 
 		
 
