--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@ li {
 <div id="navBar">
 	<ul>
 	  	<li><a href="https://GiangFett.githiub.io">Home</a></li>
-	  	<li><a href="">Daily Brew</a></li>
-	  	<li><a href="">Featured Coffee</a></li>
-	  	<li><a href="">How To</a></li>
-	  	<li><a href="">About</a></li>	
+	  	<li><a href="https://giangofett.github.io/dailybrew.html">Daily Brew</a></li>
+	  	<li><a href="https://giangofett.github.io/feature">Featured Coffee</a></li>
+	  	<li><a href="https://giangofett.github.io/howto">How To</a></li>
+	  	<li><a href="https://giangofett.github.io/about">About</a></li>	
 	</ul>
 </div>
 	
