--- a/dailybrew.html
+++ b/dailybrew.html
@@ -29,7 +29,7 @@ li {
 <!-- Create Nav bar -->	
 <div id="navBar">
 	<ul>
-	  	<li><a href="https://GiangFett.githiub.io">Home</a></li>
+	  	<li><a href="https://GiangFett.github.io">Home</a></li>
 	  	<li><a href="https://giangofett.github.io/dailybrew.html">Daily Brew</a></li>
 	  	<li><a href="https://giangofett.github.io/feature">Featured Coffee</a></li>
 	  	<li><a href="https://giangofett.github.io/howto">How To</a></li>
