--- a/dailybrew.html
+++ b/dailybrew.html
@@ -29,11 +29,11 @@ li {
 <!-- Create Nav bar -->	
 <div id="navBar">
 	<ul>
-	  	<li><a href="https://GiangFett.github.io">Home</a></li>
+	  	<li><a href="https://GiangoFett.github.io">Home</a></li>
 	  	<li><a href="https://giangofett.github.io/dailybrew.html">Daily Brew</a></li>
-	  	<li><a href="https://giangofett.github.io/feature">Featured Coffee</a></li>
-	  	<li><a href="https://giangofett.github.io/howto">How To</a></li>
-	  	<li><a href="https://giangofett.github.io/about">About</a></li>	
+	  	<li><a href="https://giangofett.github.io/feature.html">Featured Coffee</a></li>
+	  	<li><a href="https://giangofett.github.io/howto.html">How To</a></li>
+	  	<li><a href="https://giangofett.github.io/about.html">About</a></li>	
 	</ul>
 </div>
 
