--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ li {
 <!-- Create Nav bar -->	
 <div id="navBar">
 	<ul>
-	  	<li><a href="https://GiangoFett.github.io">Home</a></li>
+	  	<li><a href="https://GiangoFett.github.io/index.html">Home</a></li>
 	  	<li><a href="https://giangofett.github.io/dailybrew.html">Daily Brew</a></li>
 	  	<li><a href="https://giangofett.github.io/feature.html">Featured Coffee</a></li>
 	  	<li><a href="https://giangofett.github.io/howto.html">How To</a></li>
