--- a/feature.html
+++ b/feature.html
@@ -37,8 +37,8 @@ li {
 	</ul>
 </div>
 
-<div id="main_dailyBrew">
-	<h1>Featured Coffe</h2>
+<div id="main_feature">
+	<h1>Featured Coffee</h2>
 	
 	<br>
 	
