--- a/howto.html
+++ b/howto.html
@@ -5,15 +5,39 @@
 
 <style>
 
-ul {
-  list-style-type: none;
+body {
   margin: 0;
-  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-li {
-  display: inline;
+/*black background topnav*/
+.topnav {
+  overflow: hidden;
+  background-color: #2E8B57;
 }
+
+/*top nav color*/
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/*hover color*/
+.topnav a:hover {
+  background-color: #000000;
+  color: white;
+}
+
+/*active colors*/
+.topnav a.active {
+  background-color: #006400;
+  color: white;
+}
+
 </style>
 
 <body>
@@ -27,14 +51,12 @@ li {
 
 
 <!-- Create Nav bar -->	
-<div id="navBar">
-	<ul>
-	  	<li><a href="https://GiangoFett.github.io">Home</a></li>
-	  	<li><a href="https://giangofett.github.io/dailybrew.html">Daily Brew</a></li>
-	  	<li><a href="https://giangofett.github.io/feature.html">Featured Coffee</a></li>
-	  	<li><a href="https://giangofett.github.io/howto.html">How To</a></li>
-	  	<li><a href="https://giangofett.github.io/about.html">About</a></li>	
-	</ul>
+<div class ="topnav">
+	  	<a class='active' href="https://GiangoFett.github.io">Home</a></li>
+	  	<a href="https://giangofett.github.io/dailybrew.html">Daily Brew</a></li>
+	  	<a href="https://giangofett.github.io/feature.html">Featured Coffee</a></li>
+	  	<a href="https://giangofett.github.io/howto.html">How To</a></li>
+	  	<a href="https://giangofett.github.io/about.html">About</a></li>		
 </div>
 
 <div id="main_howto">
