--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@ body {
 
 
 <!-- Create Nav bar -->	
-<<div class ="topnav">
+<div class ="topnav">
 	  	<a class='active' href="https://GiangoFett.github.io">Home</a></li>
 	  	<a href="https://giangofett.github.io/dailybrew.html">Daily Brew</a></li>
 	  	<a href="https://giangofett.github.io/feature.html">Featured Coffee</a></li>
