--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@ body {
 		</head>
 	</div>
 
+<!-- Password -->
+
+<div id="signIn">
+	<form action="">
+	  	Username: <input type="text" name="Username"><p>
+	  	Password: <input type="text" name="Password"><br>
+  	<input type="submit">
+</div>
 
 <!-- Create Nav bar -->	
 <div class ="topnav">
