--- a/howto.html
+++ b/howto.html
@@ -46,7 +46,16 @@ body {
 	<head>
 			<title>How To</title>
 		</head>
-	</div>
+</div>
+
+<!-- Password -->
+
+<div id="signIn">
+	<form action="">
+	  	Username: <input type="text" name="Username"><p>
+	  	Password: <input type="text" name="Password"><br>
+  	<input type="submit">
+</div>
 
 
 
