--- a/dailybrew.html
+++ b/dailybrew.html
@@ -46,9 +46,16 @@ body {
 	<head>
 			<title>Daily Brew</title>
 		</head>
-	</div>
+</div>
 
+<!-- Password -->
 
+<div id="signIn">
+	<form action="">
+	  	Username: <input type="text" name="Username"><p>
+	  	Password: <input type="text" name="Password"><br>
+  	<input type="submit">
+</div>
 
 <!-- Create Nav bar -->	
 <div class ="topnav">
