--- a/index.html
+++ b/index.html
@@ -3,38 +3,7 @@
 
 <style>
 
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-/*black background topnav*/
-.topnav {
-  overflow: hidden;
-  background-color: #2E8B57;
-}
-
-/*top nav color*/
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-/*hover color*/
-.topnav a:hover {
-  background-color: #000000;
-  color: white;
-}
-
-/*active colors*/
-.topnav a.active {
-  background-color: #006400;
-  color: white;
-}
+/*Place style.css here*/
 
 </style>
 
@@ -44,6 +13,7 @@ body {
 <div id = "Header">
 	<head>
 			<title>Fists in the Wind</title>
+			<link href="https://giangofett.github.io/styles.css" type="text/css" rel="stylesheet" />
 		</head>
 	</div>
 
