--- a/howto.html
+++ b/howto.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 
-
 <body>
 <!-- Header -->	
 <div id = "Header">
 	<head>
 			<title>How To</title>
+			<link href="https://giangofett.github.io/styles.css" type="text/css" rel="stylesheet" />
 		</head>
 </div>
 
