--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
 <div id = "Header">
 	<head>
 			<title>About</title>
+			<link href="https://giangofett.github.io/styles.css" type="text/css" rel="stylesheet" />
 		</head>
 </div>
 
