--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
-	
+
 <body>
 
-<!-- Header -->	
-<div id = "Header">
+<!-- Tab Header -->	
 	<head>
 			<title>Fists in the Wind</title>
 			<link href="https://giangofett.github.io/styles.css" type="text/css" rel="stylesheet" />
-		</head>
+	</head>
 	</div>
 
 <!-- Password -->
@@ -28,7 +27,12 @@
 	  	<a href="https://giangofett.github.io/howto.html">How To</a></li>
 	  	<a href="https://giangofett.github.io/about.html">About</a></li>		
 </div>
-	
+
+<!-- Header -->	
+<div id="header">
+	<h1>Fist in The Wind Cafe</h1>
+</div>
+
 
 <!-- Main Content -->
 <div id = "main">			
