--- a/dailybrew.html
+++ b/dailybrew.html
@@ -3,11 +3,10 @@
 
 <body>
 <!-- Header -->	
-<div id = "Header">
 	<head>
 			<title>Daily Brew</title>
 			<link href="https://giangofett.github.io/styles.css" type="text/css" rel="stylesheet" />
-		</head>
+	</head>
 </div>
 
 <!-- Password -->
@@ -28,7 +27,8 @@
 	  	<a href="https://giangofett.github.io/about.html">About</a></li>		
 </div>
 
-<div id="main_dailyBrew">
+<div id = "header">
+<!-- <div id="main_dailyBrew"> -->
 	<h1>Daily Brew</h2>
 	
 	<br>
