--- a/feature.html
+++ b/feature.html
@@ -2,13 +2,11 @@
 <html>
 
 <body>
-<!-- Header -->	
-<div id = "Header">
 	<head>
 			<title>Featured Coffee</title>
 			<link href="https://giangofett.github.io/styles.css" type="text/css" rel="stylesheet" />
-		</head>
-</div>
+	</head>
+
 
 <!-- Password -->
 
@@ -30,7 +28,7 @@
 	  	<a href="https://giangofett.github.io/about.html">About</a></li>		
 </div>
 
-<div id="main_feature">
+<div id="header">
 	<h1>Featured Coffee</h2>
 	
 	<br>
