--- a/howto.html
+++ b/howto.html
@@ -2,13 +2,10 @@
 <html>
 
 <body>
-<!-- Header -->	
-<div id = "Header">
 	<head>
 			<title>How To</title>
 			<link href="https://giangofett.github.io/styles.css" type="text/css" rel="stylesheet" />
-		</head>
-</div>
+	</head>
 
 <!-- Password -->
 
@@ -30,7 +27,7 @@
 	  	<a href="https://giangofett.github.io/about.html">About</a></li>		
 </div>
 
-<div id="main_howto">
+<div id="header">
 	<h1>How To</h2>
 	
 	<br>
