--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
 	<h1>Fist in The Wind Cafe</h1>
 </div>
 
+<!-- Banner Picture-->
+<img src="https://raw.githubusercontent.com/GiangoFett/GiangoFett.github.io/master/Latte_art.jpg" alt="latte_art" width="500" height="333">
 
 <!-- Main Content -->
 <div id = "main">			
 	<h1>Welcome to the Fists in the wind!</h1>
-		<p>We'd like to send a warm earthy welcome from the team at Fist in the Wind. Here you will discover the amazing varities of coffee as well as the many different pairings available.</p>
+		<p>We'd like to send a warm earthy welcome from the team at Fists in the Wind. Here you will discover the amazing varities of coffee as well as the many different pairings available.</p>
 		
 	<br>			
 		<p>This site was born from the idea that coffee shouldn't be consumed alone. So go grab a cup, some food, and enjoy with some friends.</p>
