--- a/index.html
+++ b/index.html
@@ -41,13 +41,8 @@
 	<h1>Welcome to the Fists in the wind!</h1>
 		<p>We'd like to send a warm earthy welcome from the team at Fists in the Wind Cafe. Here you will discover the amazing varities of coffee as well as the many different pairings available.</p>
 		
-	<br>			
-		
-		<h2>Introduction</h2>
-			<p>Coffee is more than just a drink, coffee is a meeting. It's a time where strangers become friends and friends becoe family. We know not everyone has the passion we do about drinking or making coffee, but we're to help the good ol' folks out there that want to learn or even just start out elevating their coffee experience! </p>
-			<br>
-			<p>This site was born from the idea that coffee shouldn't be consumed alone. So go grab a cup, some food, and enjoy with some friends.</p>
-
+	<br>	
+		<p>Whether you know what a cortado is or where the origins of a Sumatran coffee bean is, to what food goes well with it. All your coffee pairing needs will be right here at Fists in the Wind Cafe.</p>
 </div>
 
 
