--- a/about.html
+++ b/about.html
@@ -30,11 +30,16 @@
 <div id="header">
 	<h1>About</h2>
 </div>
-	
+
 	<br>
 	
 	<!-- Company About information -->
-	<p>CONTENT WILL BE ADDED</p>
+<h2>About Fists in the Wind Cafe</h2>
+			<p>Coffee is more than just a drink, coffee is a meeting. It's a time where strangers become friends and friends become family. We know not everyone has the passion we do about drinking or making coffee, but we're here to help the good ol' folks out there that want to learn or even just start out elevating their coffee experience!</p>
+			<br>
+			<p>The idea behind this website is to be able to create a source, for coffee enthusiasts, that allows individuals to hone their coffee drinking experience. <p>
+			<br>
+			<p>So go grab a cup, some food, and enjoy with some friends.</p>
 
 
 </body>
