--- a/index.html
+++ b/index.html
@@ -39,10 +39,19 @@
 <!-- Main Content -->
 <div id = "main">			
 	<h1>Welcome to the Fists in the wind!</h1>
-		<p>We'd like to send a warm earthy welcome from the team at Fists in the Wind Cafe. Here you will discover the amazing varities of coffee as well as the many different pairings available.</p>
-		
+		<p>We'd like to send a warm earthy welcome from the team at Fists in the Wind Cafe. Here you will discover the amazing varities of coffee as well as how to do coffee tastings.</p>		
+	
 	<br>	
-		<p>Whether you know what a cortado is or where the origins of a Sumatran coffee bean is, to what food goes well with it. All your coffee pairing needs will be right here at Fists in the Wind Cafe.</p>
+	
+	<h3>Coffee Varietals</h3>
+		<p>You'll see below that there is a plethora of coffee beans, and drinks, available. We know that can be pretty daunting when beginning your journey.</p>
+
+		<br>
+
+		<p>So whether you know what a cortado is or where the origins of a Sumatran coffee bean is, to what food goes well with it. You can be rest assured that all your coffee needs will be right here at Fists in the Wind Cafe.</p>
+
+		<img src="https://raw.githubusercontent.com/GiangoFett/GiangoFett.github.io/master/Holiday_blend.png" width="700" height="700">
+		<img src="https://raw.githubusercontent.com/GiangoFett/GiangoFett.github.io/master/Veranda.png" width="700" height="700">
 </div>
 
 
