--- a/dailybrew.html
+++ b/dailybrew.html
@@ -1,6 +1,27 @@
 <!DOCTYPE html>
 <html>
 
+<style>
+
+.mainimg_center_align {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.descriptionimg_right_align {
+  display: block;
+  margin-left: auto;
+  margin-right: right;
+}
+
+.historyimg_left_align {
+  display: block;
+  margin-left: left;
+  margin-right: auto;
+}
+</style>
+
 <body>
 	<head>
 			<title>Daily Brew</title>
@@ -18,8 +39,8 @@
 
 <!-- Create Nav bar -->	
 <div class ="topnav">
-	  	<a class='active' href="https://GiangoFett.github.io">Home</a></li>
-	  	<a href="https://giangofett.github.io/dailybrew.html">Daily Brew</a></li>
+	  	<a href="https://GiangoFett.github.io">Home</a></li>
+	  	<a class='active' href="https://giangofett.github.io/dailybrew.html">Daily Brew</a></li>
 	  	<a href="https://giangofett.github.io/feature.html">Featured Coffee</a></li>
 	  	<a href="https://giangofett.github.io/howto.html">How To</a></li>
 	  	<a href="https://giangofett.github.io/about.html">About</a></li>		
@@ -32,7 +53,47 @@
 	<br>
 	
 	<!-- Coffee news here -->
-	<p>CONTENT WILL BE ADDED</p>
+	<h2>Daily Brew</h2>
+
+	<!-- Whole bean bag pic-->
+	<p class="mainimg_center_align">
+		<img src="https://raw.githubusercontent.com/GiangoFett/GiangoFett.github.io/master/Venice_whole_bean.png" width="500" height="900" class="mainimg_center_align">
+	</p>
+
+	<p>This week's brew comes from the company Groundwork Coffee from Southern California, and it's name is Venice. I've choosen this company due to their close distnace from where I live. I won't bore you with the it taste great, speech, because, well this site promotes trying all coffees and figuring out if it's for you or not.</p>
+	
+	<br>
+
+	
+	<p>The Venice roast is a medium blend and while I can't find it's specific orignis I can tell you that this roast tends to do well on drip style method or as an espresso if you have a capable machine. According to the Groundwork COffee company the roast is a well balanced roast, one that is neither too much of anything. Using this on my Lucca espresso machine I'd have to agree with this 100%. I was able to pull shots that had an amazing crema that which was bright and sweet with flavor. The way the roast rolls off the tongue leave it leaves the palate wanting more.</p>
+
+	<br>
+
+	<!--History Img -->
+	<div id = "historyimg_left_align">
+		<img src="https://raw.githubusercontent.com/GiangoFett/GiangoFett.github.io/master/Venice_history.png" class="historyimg_left_align">
+	</div>
+	<br>
+	
+	<!-- description img-->
+	<div id = "descriptionimg_right_align">
+		<img src="https://raw.githubusercontent.com/GiangoFett/GiangoFett.github.io/master/Venice_description.png" class="descriptionimg_right_align">
+	</div>
+
+	<h4>Recipe</h4>
+	<li>Dose in: 18grams</li>
+	<li>Yield: 27grams</li>
+	<li>Time: 28 secs</li>
+
+	<br>
+
+	<p>With the recipe supplied I was able to distinguish great flavor that was neither bland or bold. I wanted to get a ratio of, (extracted dry coffee: liquid coffee), 1.5. I found that going a small deviation in any direction, from the dose in, didn't make too much of a difference in flavor. I've yet to try this on any other brew method but we at Fists in the Wind Cafe hope that you explore it in different ways and lets us know what you think.</p>
+
+	<br>
+
+	<h6>Disclaimer</h6>
+	<p>All photos are courtesy of groundwork coffee.</p>
+
 
 </body>
 </html>
