--- a/feature.html
+++ b/feature.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 
+<style>
+
+.center_align {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+</style>
+
 <body>
 	<head>
 			<title>Featured Coffee</title>
@@ -21,9 +31,9 @@
 
 <!-- Create Nav bar -->	
 <div class ="topnav">
-	  	<a class='active' href="https://GiangoFett.github.io">Home</a></li>
+	  	<a href="https://GiangoFett.github.io">Home</a></li>
 	  	<a href="https://giangofett.github.io/dailybrew.html">Daily Brew</a></li>
-	  	<a href="https://giangofett.github.io/feature.html">Featured Coffee</a></li>
+	  	<a class='active' href="https://giangofett.github.io/feature.html">Featured Coffee</a></li>
 	  	<a href="https://giangofett.github.io/howto.html">How To</a></li>
 	  	<a href="https://giangofett.github.io/about.html">About</a></li>		
 </div>
@@ -31,11 +41,38 @@
 <div id="header">
 	<h1>Featured Coffee</h2>
 </div>
-	
+
 	<br>
 	
 	<!-- Newest Coffee -->
-	<p>CONTENT WILL BE ADDED</p>
+	<div id="center_align">
+		<img src="https://raw.githubusercontent.com/GiangoFett/GiangoFett.github.io/master/Verve_coffee_banner.png" class="center_align">
+	</div>
+	<p>The feature coffee for the month comes to you from Verve Coffee Roasters. Verve Coffee Roasters was founded by Ryan O'Donovan and Colby Barr. The two created the company out of Santa Cruz but can be found mostly across California. They cater to the crowds that mostly would be surfing our site at Fists in the Wind Cafe. If you liek to try new coffees from the 3rd wave companies I definitely recommend trying out Verve. Their selection is plentiful and they offer subscriptions so you'll never run out coffee again!</p>
+	
+	<br>
+
+	<p>The feature is the Bronson</p>
+
+	<li>Profile: medium</li>
+	<li>Region: Columbia blend</li>
+
+	<br>
+
+	<div id="center_align">
+		<img src="https://raw.githubusercontent.com/GiangoFett/GiangoFett.github.io/master/Bronson_detail.png" class="center_align">
+	</div>
+
+	<br>
+
+	<p>I tasted the Bronson roast, using my Lucca espresso machine, as a cortado. A cortado is 4 oz latte that has equal parts espresso to steamed milk. My take on it is that it was particularly full bodied roast. So not quite for everyone but if you're willing to try a coffee that has a boldness to it then this is the ticket!  </p>
+
+	<div id="center_align">
+		<img src="https://raw.githubusercontent.com/GiangoFett/GiangoFett.github.io/master/Cortado.jpg" width="700" height="1000" class="center_align">
+	</div>
+
+<h6>Disclaimer</h6>
+	<p>All stock photos are courtesy of Verve Coffee Roasters.</p>
 
 
 </body>
