--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <!-- Header -->	
 <div id="header">
-	<h1>Fist in The Wind Cafe</h1>
+	<h1>Fists in The Wind Cafe</h1>
 </div>
 
 <!-- Banner Picture-->
@@ -58,6 +58,8 @@
 		
 </div>
 
+<h6>Disclaimer</h6>
+	<p>This site was made for an academic purpose only and photos are courtesy of Starbucks coffee.</p>
 
 
 </body>
