--- a/dailybrew.html
+++ b/dailybrew.html
@@ -92,7 +92,7 @@
 	<br>
 
 	<h6>Disclaimer</h6>
-	<p>All photos are courtesy of groundwork coffee.</p>
+	<p>This site was made for an academic purpose only and photos are courtesy of groundwork coffee.</p>
 
 
 </body>
