--- a/feature.html
+++ b/feature.html
@@ -72,7 +72,7 @@
 	</div>
 
 <h6>Disclaimer</h6>
-	<p>All stock photos are courtesy of Verve Coffee Roasters.</p>
+	<p>This site was made for an academic purpose only and photos are courtesy of Verve Coffee Roasters and Giang Vu.</p>
 
 
 </body>
