--- a/howto.html
+++ b/howto.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
+<style>
 
+.center_align {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+</style>
 <body>
 	<head>
 			<title>How To</title>
@@ -20,22 +28,39 @@
 
 <!-- Create Nav bar -->	
 <div class ="topnav">
-	  	<a class='active' href="https://GiangoFett.github.io">Home</a></li>
+	  	<a href="https://GiangoFett.github.io">Home</a></li>
 	  	<a href="https://giangofett.github.io/dailybrew.html">Daily Brew</a></li>
 	  	<a href="https://giangofett.github.io/feature.html">Featured Coffee</a></li>
-	  	<a href="https://giangofett.github.io/howto.html">How To</a></li>
+	  	<a class='active' href="https://giangofett.github.io/howto.html">How To</a></li>
 	  	<a href="https://giangofett.github.io/about.html">About</a></li>		
 </div>
 
 <div id="header">
 	<h1>How To</h2>
 </div>
-	
-	<br>
-	
-	<!-- How to Content -->
-	<p>HOW TO CONTENT WILL BE ADDED</p>
 
+<!-- Banner picture-->
+	<br>
+	<div id="center_align">
+		<img src="https://raw.githubusercontent.com/GiangoFett/GiangoFett.github.io/master/Espresso.jpg" width="806" height="604" class="center_align">
+	</div>
+<!-- How to Content -->
+	<h2>The Four Steps to Tasting Coffee</h2>
+	<h3>About</h3>
+	<p>Why do we taste coffee? So we can disocver the amazing layers of flavor it has to offer. Coffee is more than just roasted beans, coffee carries subtle nuances of charecter. For example, the Venice roast for groundworks coffee is a medium roast with a medium body. It carries subtle chocolate notes married with a toasted marshmallow hints. I know you all are thinking that coffee really just taste like burnt water, but following the steps to tasting coffee will allow you to loacte and describe those flavors. Of course you wont be a master at this at first but with practice you'll be able to make your way through this coffee tasting.</p>
+
+	<h3>Step One </h3>
+	<p>Smell - We at Fists in the wind Cafe believe that there is a strong connection between the sense of smell and taste. So by smelling your coffee you'll be more likely to associate a flavor profile. I've seen special cups that facilitate this process but all you really need to do is cup your hand over your coffee and take a deep breath through your nose. </p>
+
+	<h3>Step Two</h3>
+	<p>At this point you should sip and swish the coffee through your mouth. This process allows you spread the coffee across your palate so that the flavor can reach all areas of your mouth. THe biggest thing here is to really take care to only sip the coffee, we wouldn't want you burning yourself.</p>
+	<h3>Step Three</h3>
+	<p>This step will be the easiest for most people! After sipping and swishing the coffee in your mouth you'll want to get a "feel" for the coffee. You'll want to see how smooth the coffee stays on the palate. Doing this will help you determine the body, or viccousness. The best way I can explain body is the difference in viscousness between the different milks; nonfat, 2%, and whole milk. Secondly, you'll want to see how acidic the coffee is. If the coffee is more acidic you'll feel it more on the sides and back of your tongue.</p>
+	<h3>Step Four</h3>
+	<p>The last step would be to describe the aroma from step 1, the body and acidity from step 3, and then bringing everything together to determine the flavors. Being able to do this might take some time but the more coffee you drink, the more refined a palate that you'll create. I've also found that by doing blindfold taste tests of foods you already know really help to hone in a person's palate.</p>
+
+	<h6>Disclaimer</h6>
+	<p>This site was made for an academic purpose only and photos are courtesy Giang Vu.</p>
 
 </body>
 </html>
