--- a/about.html
+++ b/about.html
@@ -20,11 +20,11 @@
 
 <!-- Create Nav bar -->	
 <div class ="topnav">
-	  	<a class='active' href="https://GiangoFett.github.io">Home</a></li>
+	  	<a href="https://GiangoFett.github.io">Home</a></li>
 	  	<a href="https://giangofett.github.io/dailybrew.html">Daily Brew</a></li>
 	  	<a href="https://giangofett.github.io/feature.html">Featured Coffee</a></li>
 	  	<a href="https://giangofett.github.io/howto.html">How To</a></li>
-	  	<a href="https://giangofett.github.io/about.html">About</a></li>		
+	  	<a class='active' href="https://giangofett.github.io/about.html">About</a></li>		
 </div>
 
 <div id="header">
